# energy-forecast-pt

./: .dockerignore  .env.example  .gitignore  .hfignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  INSTALL_MAKE.md  Makefile  README.md  TASKS.md  VALIDATION_REPORT.md  docker-compose.yml  dvc.yaml  mutmut_config.py  pyproject.toml  pytest.ini  render.yaml  requirements-dev.txt  requirements.txt  run_fix.sh  run_notebooks.py  run_notebooks.sh  tasks.ps1  test_api.ps1  validate.py
.github/: dependabot.yml
.github/workflows/: ci-cd.yml  drift-check.yml  keep-alive.yml  retrain-monthly.yml
configs/: README.md  training.yaml  training_quick.yaml
data/models/: .gitkeep  README.md  advanced_feature_names.txt  ensemble_weights.json  feature_importance_advanced.csv  feature_names.txt  feature_names_no_lags.txt  feature_names_optimized.txt  metadata_advanced.json  model_comparison.csv  model_comparison_no_lags.csv  training_metadata.json  training_metadata_no_lags.json
data/models/analysis/: model_comparison.csv  model_comparison_no_lags.csv
data/models/features/: advanced_feature_names.txt  feature_names.txt  feature_names_no_lags.txt  feature_names_optimized.txt
data/models/metadata/: best_hyperparams.json  ensemble_weights.json  metadata_advanced.json  metadata_multistep.json  metadata_optimized.json  training_metadata.json  training_metadata_no_lags.json
data/processed/: feature_names.txt  processed_data.parquet  processed_data.parquet.dvc  processed_data_sample.csv  test_data.parquet  train_data.parquet
data/raw/: consumption_data.parquet  data_stats.txt  energy_consumption_sample.csv  holidays_data.parquet  holidays_features.csv  holidays_features.parquet  ren_consumption.parquet  weather_data.parquet
deploy/: README.md  aws-ecs.yml  azure-container-app.yml  deploy-aws.sh  deploy-azure.sh  deploy-gcp.sh  gcp-cloud-run.yml
deploy/fly/: README.md  fly.toml
deploy/helm/energy-forecast-pt/: .helmignore  Chart.yaml  README.md  values-dev.yaml  values-prod.yaml  values.yaml
deploy/k8s/: README.md  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  pdb.yaml  secret.yaml  service.yaml  servicemonitor.yaml
deploy/prometheus/: README.md  alertmanager.yml  alerts.yml  prometheus.yml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DATA_DICTIONARY.md  DECISIONS.md  DEPLOYMENT.md  EXECUTIVE_SUMMARY.md  INDEX.md  LOCKFILE.md  ML_PIPELINE.md  MODEL_CARD.md  MONITORING.md  README.md  SECURITY.md
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
frontend/e2e/: dashboard.spec.ts  navigation.spec.ts  predict.spec.ts
frontend/e2e/fixtures/: mockApi.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.test.ts  client.ts  hooks.ts
frontend/src/assets/: portugalPath.ts
frontend/src/components/: Card.test.tsx  Card.tsx  ChartSkeleton.test.tsx  ChartSkeleton.tsx  EmptyState.tsx  ErrorBoundary.tsx  ExplanationPanel.tsx  HeroChart.tsx  LanguageToggle.tsx  Layout.tsx  RegionSelect.test.tsx  RegionSelect.tsx  Sparkline.tsx  Toast.test.tsx  Toast.tsx  WeatherForm.tsx
nginx/: nginx.conf
notebooks/: 01_exploratory_data_analysis.ipynb  02_model_evaluation.ipynb  02_model_training.ipynb  03_advanced_feature_analysis.ipynb  03_model_training_no_lags.ipynb  04_error_analysis.ipynb  04_model_evaluation.ipynb  05_advanced_feature_engineering.ipynb  05_robust_validation.ipynb  06_hyperparameter_tuning.ipynb  07_error_analysis.ipynb  08_model_stacking.ipynb  09_performance_optimization.ipynb  10_multistep_forecasting.ipynb  11_robust_validation.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
scripts/: analyze_holidays_weekends.py  backtest_monthly.py  check_drift.py  generate_notebooks.py  refresh_and_retrain.sh  retrain.py  run_multistep_only.py  run_mutation_tests.sh  run_no_lags_only.py  run_with_lags_only.py  smoke_test.sh  verify_no_cross_region_leakage.py
scripts/data_pipeline/: README.md  build_dataset.py  build_dataset_real_regional.py  cp4_to_nuts2.py  download_eredes_national.py  download_eredes_regional.py  download_weather.py  validate_dataset.py
src/: __init__.py
src/api/: __init__.py  anomaly.py  dependencies.py  main.py  metrics.py  middleware.py  prediction.py  schemas.py  store.py  types.py
src/features/: __init__.py  feature_engineering.py
src/models/: __init__.py  baselines.py  evaluation.py  experiment_tracker.py  feature_selection.py  metadata.py  model_registry.py
src/monitoring/: __init__.py  drift.py
src/utils/: __init__.py  config.py  config_loader.py  logger.py  metrics.py  reproducibility.py
tests/: README.md  __init__.py  conftest.py  test_anomaly_metrics.py  test_api.py  test_api_extended.py  test_api_regions_and_errors.py  test_conformal.py  test_coverage_boost.py  test_coverage_gaps.py  test_custom_metrics.py  test_data_pipeline.py  test_data_pipeline_e2e.py  test_drift.py  test_edge_cases.py  test_evaluation_extended.py  test_feature_engineering.py  test_full_integration.py  test_integration.py  test_load.py  test_metadata.py  test_metrics_extended.py  test_model_registry.py  test_models.py  test_new_features.py  test_performance.py  test_property_based.py  test_rate_limit.py  test_retrain_script.py  test_smoke.py  test_stress.py
tests/test_routers/: conftest.py  test_admin_router.py  test_batch_router.py  test_explain_router.py  test_forecast_router.py  test_health_router.py  test_monitoring_router.py  test_predict_router.py
(+58 files in other folders)
