[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "energy-forecast-pt"
version = "1.0.0"
description = "Energy consumption forecasting system for Portugal by region"
requires-python = ">=3.11"
authors = [{ name = "Pedro Marques" }]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --tb=short -ra --timeout=60 --benchmark-disable"
filterwarnings = [
    "ignore::ResourceWarning",
    "ignore::sklearn.exceptions.UndefinedMetricWarning",
    "ignore::UserWarning:sklearn",
    # asyncio.to_thread coroutine left unawaited when asyncio.wait_for is mocked
    # with a synchronous side_effect in TestPredictionErrorPaths — benign in tests.
    "ignore:coroutine.*was never awaited:RuntimeWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "api: marks tests related to API endpoints",
    "features: marks tests related to feature engineering",
    "models: marks tests related to model evaluation",
    "load: marks performance/load tests",
    "stress: marks stress tests",
    "property_based: marks property-based tests (Hypothesis)",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 85

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "xgboost.*",
    "catboost.*",
    "lightgbm.*",
    "sklearn.*",
    "pandas.*",
    "numpy.*",
    "uvicorn.*",
    "yaml.*",
    "joblib.*",
]
ignore_missing_imports = true

[tool.mutmut]
paths_to_mutate = "src/"
tests_dir = "tests/"
runner = "python -m pytest -x --timeout=30"

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]  # Allow assert statements

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "SIM"]
ignore = [
    "E203",   # whitespace before ':'
    "E501",   # line too long (handled by black)
    "S101",   # use of assert
    "S102",   # exec builtin
    "S104",   # hardcoded bind all interfaces
    "S603",   # subprocess call
    "S607",   # start process with partial path
    "B008",   # function call in default argument (FastAPI Depends)
    "B017",   # assert raises Exception
    "B904",   # raise without from inside except
    "B905",   # zip without explicit strict
    "B007",   # unused loop control variable
    "N803",   # invalid argument name (X_train, etc.)
    "N806",   # non-lowercase variable in function (X, Y, etc.)
    "C408",   # unnecessary collection call
    "F841",   # unused variable
    "SIM117", # multiple with statements
    "SIM118", # in-dict-keys
]
